fix stop web page rotation on mobile

--- a/src/components/shared/Cards/style.css
+++ b/src/components/shared/Cards/style.css
@@ -10,19 +10,20 @@
 .card-merchant-wrapper {
   display: flex;
   align-items: center;
-  padding-left: 40px;
+  /* padding-left: 40px; */
+  width: 40%;
 }
 
 .card-merchant-wrapper .card-icon {
-  padding-left: 10px;
+  padding-left: 6px;
   width: 35px;
-  height: auto;
+  height: 30px;
   z-index: 2;
   position: relative;
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  margin-left: 50%;
+  /* margin-left: 50%; */
   margin-right: 12%;
 }
 
@@ -43,13 +44,15 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 100%;
+  margin-right: -20px;
+  width: 70%;
 }
 
 .card-merchant-name {
   font-size: 14px;
   font-weight: 500;
   color: rgba(16, 24, 40, 1);
+  width: 200px;
 }
 
 .transaction-titles {
@@ -309,7 +312,7 @@
 }
 
 .card-icon-wrapper {
-  width: 35px;
+  width: 72px;
   height: 35px;
   display: flex;
   overflow: hidden;
@@ -318,6 +321,17 @@
   position: relative;
   border-radius: 10px;
   z-index: 2;
+}
+
+.card-icon-style {
+  width: 36px;
+  height: auto;
+}
+
+.card-icon-default {
+  width: 35px;
+  height: 70px;
+  margin-left: 1rem;
 }
 
 .card-icon-filter {
@@ -370,15 +384,28 @@
     font-size: 10px;
     padding-right: 10px;
   }
+  .card-content {
+    margin-right: 20px;
+  }
   .card-merchant-name {
     font-size: 12px;
+    width: 50%;
   }
   .card-merchant-wrapper {
     padding-left: 8px;
-    /* width: 45px; */
+    width: 90px;
   }
   .card-home-content {
     margin-right: 40px;
+  }
+  .card-merchant-wrapper .card-icon {
+    width: 33px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .card-icon-wrapper {
+    width: 40px;
   }
 }
 
@@ -405,4 +432,5 @@
     height: 18px;
   }
 }
+
 /*  end Near Expired card style */
